    2. The "_self" target only works for links, not forms
    3. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response. 
       This behavior matches that currently used by IE and Navigator.

Limitations: HttpUnit does not support JavaScript

                            
Revision History:

 5-May-01 1.2.4
Acknowledgements:
    Thanks to Jim Kimball for finding and fixing the redirection of subframes
    
Problems corrected:
    1. Redirection with subframes was incorrectly targeted at the top frame.
    2. No longer capitalizes all header names; this was necessary for
       compatibility with those servers that do not understand case-insensitive
       header names.
    3. Repeated requests to the same URL were not resending requests properly. 
       This caused some problems with validation.
    4. Now correctly passes the full specification of uploaded files, rather than just the name.

Additions:
    1. Transmitted headers as well as received headers are now shown when loggingHttpHeaders
       is enabled.
    2. The GetMethodWebRequest and PostMethodWebRequest constructors which accept a target 
       are now public.
    3. Added getID to WebForm
    4. Added getFormWithID to HTMLSegment interface


2-Apr-01 1.2.3
Acknowledgements:
    Thanks to Silvio Samadelli for improved cookie-recognition logic
    
Problems corrected:
    1. Under JDK 1.3, error headers would sometimes cause a FileNotFoundException
    2. Cookies containing '=' or wrapped in quotes are now recognized
    3. The JavaDoc now correctly shows the public methods in TableCell used for handling nested tables.
    4. The XML retrieval test is no longer run when Xerces is not in the classpath, rather than giving an error.
    5. File upload capability no longer depends on JavaMail and JAF, although its test does
    6. Non-conforming authentication headers are now assumed to be requesting Basic authentication

Additions: