@@ -1,4 +1,24 @@
 package com.meterware.httpunit;
+/********************************************************************************************************************
+* $Id$
+*
+* Copyright (c) 2000-2001, Russell Gold
+*
+* Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated 
+* documentation files (the "Software"), to deal in the Software without restriction, including without limitation 
+* the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and
+* to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+*
+* The above copyright notice and this permission notice shall be included in all copies or substantial portions 
+* of the Software.
+*
+* THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
+* THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+* AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF
+* CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
+* DEALINGS IN THE SOFTWARE.
+*
+*******************************************************************************************************************/
 
 import java.io.*;
 import java.net.*;
@@ -36,6 +56,17 @@ public class WebRequest {
      * Sets the file for a parameter upload in a web request. 
      **/
     public void selectFile( String parameterName, File file ) {
+        if (_sourceForm == null || !_sourceForm.isFileParameter( parameterName )) {
+            throw new IllegalNonFileParameterException( parameterName );
+        }
+        if (!isMimeEncoded()) throw new MultipartFormRequiredException();
+    }
+
+
+    /**
+     * Sets the file for a parameter upload in a web request. 
+     **/
+    public void selectFile( String parameterName, File file, String contentType ) {
         if (_sourceForm == null || !_sourceForm.isFileParameter( parameterName )) {
             throw new IllegalNonFileParameterException( parameterName );
         }
@@ -279,6 +310,7 @@ public class WebRequest {
     static class UploadFileSpec {
         UploadFileSpec( File file ) {
             _file = file;
+            guessContentType();
         }
 
 
@@ -299,7 +331,32 @@ public class WebRequest {
 
         private File _file;
 
-        private String _contentType;
+        private String _contentType = "text/plain";
+
+        private static String[][] CONTENT_EXTENSIONS = {
+            { "text/plain", "txt", "text" },
+            { "text/html",  "htm", "html" },
+            { "image/gif",  "gif" },
+            { "image/jpeg", "jpg", "jpeg" },
+            { "image/png",  "png" }
+        };
+
+
+        private void guessContentType() {
+            String extension = getExtension( _file.getName() );
+            for (int i = 0; i < CONTENT_EXTENSIONS.length; i++) {
+                for (int j=1; j < CONTENT_EXTENSIONS[i].length; j++) {
+                    if (extension.equalsIgnoreCase( CONTENT_EXTENSIONS[i][j] )) {
+                        _contentType = CONTENT_EXTENSIONS[i][0];
+                        return;
+                    }
+                }
+            }
+        }
+
+        private String getExtension( String fileName ) {
+            return fileName.substring( fileName.lastIndexOf( '.' ) + 1 );
+        }
     }
 
 
